<resources>
    <string name="app_name">MyPetProject</string>

    //bottom navigation
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_image">poster_image_description</string>
    <string name="poster_for_movie">Poster for movie</string>
    <string name="description_of_movie">Description of movie</string>
    <string name="back">Back</string>
    <string name="title_of_movie">Title of movie</string>
    <string name="genres">Genres:</string>
    <string name="none_target_value">none target value</string>
    <string name="countries">Countries</string>
    <string name="rating_kinopoisk">Rating Kinopoisk</string>
    <string name="rating_imdb">Rating Imdb</string>
    <string name="year">Year</string>
    <string name="leghth">Leghth</string>
    <string name="person_photo">Person photo</string>
    <string name="name">name</string>

</resources>