<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/search"/>

    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/favorite"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>

    <item
        android:id="@+id/setting"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/settings"/>

</menu>